--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .scrollbar-thumb::-webkit-scrollbar {
+    width: 8px;
+    background: transparent;
+    border-radius: 10px;
+  }
+  .scrollbar-track-piece::-webkit-scrollbar-thumb {
+    background-color: #dcdcdc;
+    border-radius: 10px;
+  }
+  .scrollbar-track::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  /**Darkmode scrollbar**/
+  .scrollbar-track-piece-dmode::-webkit-scrollbar-thumb {
+    background-color: #2b2b2b;
+    border-radius: 20px;
+  }
+}
+
 html,
 body {
   padding: 0;
